--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <verbose>true</verbose>
+                    <fork>true</fork>
                     <executable>/usr/lib/jvm/java-17-openjdk/bin/java</executable>
+                    <compilerVersion>1.3</compilerVersion>
                 </configuration>
             </plugin>
             <plugin>
