--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <verbose>true</verbose>
-                    <fork>true</fork>
-                    <executable>/usr/lib/jvm/java-17-openjdk/bin/java</executable>
-                    <compilerVersion>1.3</compilerVersion>
+                    <release>17</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
